--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <li class="separador"><a href="./utilitarios.html">Utilitarios</a></li>
               <li class="separador"><a href="./clàsicos.html">Clàsicos</a></li>
               <li class="separador"><a href="./motos.html">Motos</a></li>
-              <li class="separador"><a href="./formulariocontacto.html">Formulario de contacto</a></li>
+              <li class="separador"><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
               <li class="separador"><a href="./maps.html">Donde encontrarnos</a>
               </li><li class="separador"><a href="./tabla.html">Tabla de Integrantes</a ></li>
               <a href="./fotos/imgdescarga.png" download="NombreDePagina">Descargar</a>
@@ -112,7 +112,7 @@
         <img src="./fotos/logowa.ico" />
       </a>
 
-      <div class="mail">lucas.salafia1992@gmail.com | franco.torres1992@gmail.com</div>
+      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
 
       <div>
         <span>SEGUINOS EN</span>
