--- a/autos.html
+++ b/autos.html
@@ -31,7 +31,7 @@
               <li class="separador"><a href="./utilitarios.html">Utilitarios</a></li>
               <li class="separador"><a href="./clàsicos.html">Clàsicos</a></li>
               <li class="separador"><a href="./motos.html">Motos</a></li>
-              <li class="separador"><a href="./formulariocontacto.html">Formulario de contacto</a></li>
+              <li class="separador"><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
               <li class="separador"><a href="./maps.html">Donde encontrarnos</a>
               </li><li class="separador"><a href="./tabla.html">Tabla de Integrantes</a ></li>
               <a href="./fotos/imgdescarga.png" download="NombreDePagina">Descargar</a>
@@ -49,8 +49,7 @@
       <li>Baul 419L</li>
       <li>Consumo estimado: Ciudad: 16.1km/L</li>
       <li>Precio desde $4 millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Chevrolet Onix</h2>
@@ -61,8 +60,7 @@
       <li>Baul 303L</li>
       <li>Consumo estimado: Ciudad: 23km/L</li>
       <li>Precio desde $3,76millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Chevrolet Tracker Suv</h2>
@@ -73,8 +71,7 @@
       <li>Baul 393L</li>
       <li>Consumo estimado: N/D</li>
       <li>Precio desde $4,37millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Ford Focus</h2>
@@ -85,8 +82,7 @@
       <li>Baul 316L</li>
       <li>Consumo estimado: Ciudad: 7,25 l/100km</li>
       <li>precio desde $4,30millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Honda City</h2>
@@ -97,8 +93,7 @@
       <li>Baul 506L</li>
       <li>Consumo estimado: Ciudad: 14km/l</li>
       <li>precio desde $5 millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Honda Ciciv</h2>
@@ -109,8 +104,7 @@
       <li>Baul 525L</li>
       <li>Consumo estimado: Ciudad: 7,9 l/100km</li>
       <li>Precio desde $7 milloones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Renault Duster</h2>
@@ -121,8 +115,7 @@
       <li>Baul 475L</li>
       <li>Consumo estimado: Ciudad: 9 l/100km</li>
       <li>Precio desde $ 5 millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul>
     <br /><br />
     <h2 class="b">Toyota Corolla</h2>
@@ -133,8 +126,7 @@
       <li>Baul 470L</li>
       <li>Consumo estimado: Ciudad: 8,8 l/100 km</li>
       <li>Precio desde $7 millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul><br>
 
     <h2 class="b">Toyota Corolla (Usado)</h2>
@@ -145,8 +137,7 @@
       <li>Modelo 2009</li>
       <li>120.000 kilometros</li>
       <li>Precio $3 millones</li>
-      <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-      target="_blank">Comprar</a>
+      <a href="cotizacion.html" target="_blank">Cotizar</a>
     </ul><br>
     
     <footer class="footer">
@@ -157,11 +148,11 @@
         <img src="./fotos/logowa.ico" />
       </a>
 
-      <div class="mail">lucas.salafia1992@gmail.com | franco.torres1992@gmail.com</div>
+      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
 
       <div>
         <span>SEGUINOS EN</span>
-        <a target="_blank" class="redes" href="https://www.instagram.com/lucas_salafia/">
+        <a target="_blank" class="redes" href="https://www.instagram.com/franco.torres92/">
           <img src="./fotos/logoinst.png" />
         </a>
         <a target="_blank" href="https://www.facebook.com/lucas.salafia/">
