--- a/tabla.html
+++ b/tabla.html
@@ -26,7 +26,7 @@
               <li class="separador"><a href="./utilitarios.html">Utilitarios</a></li>
               <li class="separador"><a href="./clàsicos.html">Clàsicos</a></li>
               <li class="separador"><a href="./motos.html">Motos</a></li>
-              <li class="separador"><a href="./formulariocontacto.html">Formulario de contacto</a></li>
+              <li class="separador"><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
               <li class="separador"><a href="./maps.html">Donde encontrarnos</a>
               </li><li class="separador"><a href="./tabla.html">Tabla de Integrantes</a ></li>
               <a href="./fotos/imgdescarga.png" download="NombreDePagina">Descargar</a>
@@ -70,11 +70,11 @@
         <img src="./fotos/logowa.ico" />
       </a>
 
-      <div class="mail">lucas.salafia1992@gmail.com | franco.torres1992@gmail.com</div>
+      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
 
       <div>
         <span>SEGUINOS EN</span>
-        <a target="_blank" class="redes" href="https://www.instagram.com/lucas_salafia/">
+        <a target="_blank" class="redes" href="https://www.instagram.com/franco.torres92/">
           <img src="./fotos/logoinst.png" />
         </a>
         <a target="_blank" href="https://www.facebook.com/lucas.salafia/">
