--- a/utilitarios.html
+++ b/utilitarios.html
@@ -30,7 +30,7 @@
               <li class="separador"><a href="./utilitarios.html">Utilitarios</a></li>
               <li class="separador"><a href="./clàsicos.html">Clàsicos</a></li>
               <li class="separador"><a href="./motos.html">Motos</a></li>
-              <li class="separador"><a href="./formulariocontacto.html">Formulario de contacto</a></li>
+              <li class="separador"><a href="./preguntasfrecuentes.html">Preguntas Frecuentes</a></li>
               <li class="separador"><a href="./maps.html">Donde encontrarnos</a>
               </li><li class="separador"><a href="./tabla.html">Tabla de Integrantes</a ></li>
               <a href="./fotos/imgdescarga.png" download="NombreDePagina">Descargar</a>
@@ -48,8 +48,7 @@
         <li>Baul 800L</li>
         <li>Consumo estimado: Ciudad: 6,0 l/100km</li>
         <li>Precio desde $6 milloones</li>
-        <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-        target="_blank">Comprar</a>    
+        <a href="cotizacion.html" target="_blank">Cotizar</a>
      </ul><br><br>
 
      <h2 class="b">Nissan NV200</h2>
@@ -61,8 +60,7 @@
         <li>Baul 443L</li>
         <li>Consumo estimado: 5.1 l/100km</li>
         <li>Precio desde $7 milloones</li>
-        <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-        target="_blank">Comprar</a>    
+        <a href="cotizacion.html" target="_blank">Cotizar</a>
      </ul><br><br>
 
      <h2 class="b">Fiat Fiorino</h2>
@@ -74,8 +72,7 @@
         <li>Capacidad de carga 640 KG</li>
         <li>Consumo estimado: Ciudad: 5,2 l/100 km</li>
         <li>Precio desde $4 milloones</li>
-        <a href="https://www.google.com.ar/maps/place/UTN+Universidad+Tecnol%C3%B3gica+Nacional,+Facultad+Regional+Mar+del+Plata/@-38.0491843,-57.5425825,17z/data=!3m2!4b1!5s0x9584dde622974705:0xae9876d4dad26093!4m6!3m5!1s0x9584dde618d88b07:0x98429fd7ae71776c!8m2!3d-38.0491843!4d-57.5425825!16s%2Fg%2F1hc4w29jp" 
-        target="_blank">Comprar</a>
+        <a href="cotizacion.html" target="_blank">Cotizar</a>
         <br><br>   
      </ul><br>
 
@@ -87,11 +84,11 @@
           <img src="./fotos/logowa.ico" />
         </a>
   
-        <div class="mail">lucas.salafia1992@gmail.com | franco.torres1992@gmail.com</div>
+        <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
   
         <div>
           <span>SEGUINOS EN</span>
-          <a target="_blank" class="redes" href="https://www.instagram.com/lucas_salafia/">
+          <a target="_blank" class="redes" href="https://www.instagram.com/franco.torres92/">
             <img src="./fotos/logoinst.png" />
           </a>
           <a target="_blank" href="https://www.facebook.com/lucas.salafia/">
