--- a/autos.html
+++ b/autos.html
@@ -148,7 +148,7 @@
         <img src="./fotos/logowa.ico" />
       </a>
 
-      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
+      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar | mariano.suarez@todomotores.com.ar | lisandro.zavaglia@todomotores.com.ar</div>
 
       <div>
         <span>SEGUINOS EN</span>
