--- a/tabla.html
+++ b/tabla.html
@@ -37,29 +37,35 @@
 
     <table>
       <tr>
-        <th>Foto</th>
+        <th>Quienes somos</th>
         <th>Nombre</th>
         <th>Apellido</th>
         <th>Edad</th>
       </tr>
       <tr>
-        <td><img class="fotos" src="./fotos/fotolucas.jpg" width="50" height="50" /></td>
+        <td>Presidente de la empresa</td>
         <td>Lucas</td>
         <td>Salafia</td>
         <td>30</td>
       </tr>
       <tr>
-        <td><img class="fotos" src="./fotos/fotofranco.jpg" width="50" height="50" /></td>
+        <td>Encargado</td>
         <td>Franco A.</td>
         <td>Torres</td>
         <td>30</td>
       </tr>
       <tr>
-        <td><img class="fotos" src="./fotos/fotoindia.jpg" width="50" height="50" /></td>
-        <td>India</td>
-        <td>"S"</td>
-        <td>10</td>
-      </tr>
+        <td>Accionista</td>
+          <td>Mariano</td>
+          <td>Suarez</td>
+          <td>30</td>
+        </tr>
+        <tr>
+          <td>Gerente general</td>
+          <td>Lisandro</td>
+          <td>Zavaglia</td>
+          <td>30</td>
+        </tr>
     </table><br>
 
     <footer class="footer">
@@ -70,7 +76,7 @@
         <img src="./fotos/logowa.ico" />
       </a>
 
-      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
+      <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar | mariano.suarez@todomotores.com.ar | lisandro.zavaglia@todomotores.com.ar</div>
 
       <div>
         <span>SEGUINOS EN</span>
