--- a/cotizacion.html
+++ b/cotizacion.html
@@ -67,7 +67,7 @@
       <img src="./fotos/logowa.ico" />
     </a>
 
-    <div class="mail">lucas.salafia1992@gmail.com | franco.torres1992@gmail.com</div>
+    <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar | mariano.suarez@todomotores.com.ar | lisandro.zavaglia@todomotores.com.ar</div>
 
     <div>
       <span>SEGUINOS EN</span>
