--- a/utilitarios.html
+++ b/utilitarios.html
@@ -84,8 +84,8 @@
           <img src="./fotos/logowa.ico" />
         </a>
   
-        <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar</div>
-  
+        <div class="mail">lucas.salafia1992@todomotores.com.ar | franco.torres17@todomotores.com.ar | mariano.suarez@todomotores.com.ar | lisandro.zavaglia@todomotores.com.ar</div>
+          
         <div>
           <span>SEGUINOS EN</span>
           <a target="_blank" class="redes" href="https://www.instagram.com/franco.torres92/">
